fix margin issue for buttons on smaller screens

--- a/client/src/Components/NewsFeed/NewsArticle/NewsArticle.css
+++ b/client/src/Components/NewsFeed/NewsArticle/NewsArticle.css
@@ -50,5 +50,7 @@
     width: 100%;
     padding: 10px;
     margin-top: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
   }
 }
